changed aria-labels in bloc.js, aligned form, corrected W3C validators issues

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a:hover {
   width: 100%;
   clear: both;
   background: 50% 50% no-repeat;
-  padding: 0 50px;
+  padding: 0 50px 0 50px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -245,7 +245,6 @@ a:hover {
 
 .navbar {
   margin-bottom: 0;
-  /* z-index: 1; */
 }
 
 .navbar-brand {
@@ -849,10 +848,7 @@ h4 {
     overflow-x: hidden;
     position: relative;
   }
-  .bloc {
-    padding-left: constant(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
-  }
+  
   .bloc-group,
   .bloc-group .bloc {
     display: block;
@@ -861,8 +857,6 @@ h4 {
   .bloc-fill-screen .fill-bloc-top-edge,
   .bloc-fill-screen .fill-bloc-bottom-edge {
     padding: 0 20px;
-    padding-left: constant(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
   }
   .scrollToTop {
     visibility: hidden;
